update pyconf file

--- a/pymakr.conf
+++ b/pymakr.conf
@@ -14,8 +14,11 @@
         "env",
         "venv",
         ".python-version",
-        ".micropy/",
-        "micropy.json"
+        ".micropy",
+        "micropy.json",
+        ".pylintrc",
+        "dev-requirements.txt",
+        "requirements.txt"
     ],
     "fast_upload": false
 }
